--- a/src/nr/nft_contract/Nargo.toml
+++ b/src/nr/nft_contract/Nargo.toml
@@ -1,13 +1,10 @@
 [package]
-name = "covenant_aztec"
-type = "contract"
+name = "nft_contract"
 authors = [""]
-compiler_version = ">=0.18.0"
+compiler_version = ">=1.0.0"
+type = "contract"
 
 [dependencies]
 aztec = { git = "https://github.com/AztecProtocol/aztec-packages/", tag = "v3.0.0-devnet.5", directory = "noir-projects/aztec-nr/aztec" }
 compressed_string = { git = "https://github.com/AztecProtocol/aztec-packages/", tag = "v3.0.0-devnet.5", directory = "noir-projects/aztec-nr/compressed-string" }
-token = {path = "../token_contract"}
-nft= {path = "../nft_contract"}
-
-
+contract_instance_registry = { git = "https://github.com/AztecProtocol/aztec-packages/", tag = "v3.0.0-devnet.5", directory = "noir-projects/noir-contracts/contracts/protocol/contract_instance_registry" }
